initial devfile support